Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56650

QML Text ignores fontSizeMode setting if textFormat is Text.RichText

XMLWordPrintable

    • ec33541cf3873bc311522d3ae24c75cf6aa28a6b (qt/qtdeclarative/5.15)

      Next piece of code working incorrectly:

      import QtQuick 2.5
      import QtQuick.Window 2.0
      
      Window {
          visible: true
          width: 400
          height: 100
      
          Text {
              anchors.fill: parent;
              text: "This string not fit into area";
              minimumPointSize: 10;
              font.pointSize: 72;
              fontSizeMode: Text.Fit;
              textFormat: Text.RichText;
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            kadomcevi Igor Kadomcev
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes