Doc: clarify the fontSizeMode property in terms of Rich and Styled text

Fixes: QTBUG-56650
Change-Id: I7b750031f3af368de7f7cebe64a5d1ce77f68408
Reviewed-by: Paul Wicking <paul.wicking@qt.io>