src/quick/items/qquicktext.cpp
@@ -2650,6 +2650,12 @@ void QQuickText::setLineHeightMode(LineHeightMode mode)
 
     If the text does not fit within the item bounds with the minimum font size
     the text will be elided as per the \l elide property.
+
+    If the \l textFormat property is set to \l Text.RichText, this will have no effect at all as the
+    property will be ignored completely. If \l textFormat is set to \l Text.StyledText, then the
+    property will be respected provided there is no font size tags inside the text. If there are
+    font size tags, the property will still respect those. This can cause it to not fully comply with
+    the fontSizeMode setting.
 */
 
 QQuickText::FontSizeMode QQuickText::fontSizeMode() const
